# tiny_os

./: Cargo.toml  README.md
.cargo/: config.toml
src/: main.rs  vga_buffer.rs
tests/: basic_boot.rs  should_panic.rs
