[package]
name = "tiny_os"
version = "0.1.0"
edition = "2021"
authors = ["Piotr Prokopowicz <p.prokopowicz1@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.8"

[profile.dev]
panic = "abort"

[profile.release]
panic = "abort"