[package]
name = "tiny_os"
version = "0.1.0"
edition = "2021"
authors = ["Piotr Prokopowicz <p.prokopowicz1@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bootloader = "0.9.8"
volatile = "0.2.6"
spin = "0.9.4"
x86_64 = "0.14.10"
uart_16550 = "0.2.18"

[dependencies.lazy_static]
version = "1.0"
features = ["spin_no_std"]

[profile.dev]
# panic = "abort"

[profile.release]
# panic = "abort"

[[test]]
name = "should_panic"
harness = false

[package.metadata.bootimage]
test-args = ["-device", "isa-debug-exit,iobase=0xf4,iosize=0x04", "-serial", "stdio", "-display", "none"]
test-success-exit-code = 33
test-timeout = 300